Removed dotted border because of webkit issue https://code.google.com/p/chromium/issues/detail?id=356132

--- a/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
+++ b/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
@@ -7985,7 +7985,7 @@ table {
   width: 100%; }
 
 tr {
-  border-bottom: 1px dotted #CACACA; }
+  border-bottom: 1px solid #ddd; }
 
 tbody tr.selected {
   background-color: #9bdbff; }
