--- a/tornadofaces/src/themes/tornado/scss/components/_table.scss
+++ b/tornadofaces/src/themes/tornado/scss/components/_table.scss
@@ -3,8 +3,6 @@
 
 $default-cell-padding: 1rem;
 $default-table-border: 1px solid #ddd; //todo: make global default border
-$default-table-border-dotted: 1px dotted #CACACA; //todo: make global default border
-
 $table-zebra-background: #EFF6FA;
 $table-selected-row-background: #9bdbff;
 
@@ -30,7 +28,7 @@ tfoot {
 
 }
 tr {
-  border-bottom: $default-table-border-dotted;
+  border-bottom: $default-table-border;
 }
 
 // Selection
