Deselect table row support

--- a/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
+++ b/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
@@ -7990,7 +7990,7 @@ tr {
 tbody tr.selected {
   background-color: #9bdbff; }
 
-.table-rowselect-single tbody tr, .table-rowselect-multiple tbody tr {
+.table-rowselect-single tbody tr, .table-rowselect-multi tbody tr {
   cursor: pointer; }
 
 tbody tr.table-expand-row {
