--- a/tornadofaces/src/themes/tornado/scss/components/_table.scss
+++ b/tornadofaces/src/themes/tornado/scss/components/_table.scss
@@ -3,8 +3,10 @@
 
 $default-cell-padding: 1rem;
 $default-table-border: 1px solid #ddd; //todo: make global default border
+$default-table-border-dotted: 1px dotted #CACACA; //todo: make global default border
+
 $table-zebra-background: #EFF6FA;
-$table-selected-row-background: #9bdbff;
+$table-selected-row-background: #C4EAFF;
 
 $table-compact-padding: 0.5rem;
 $table-compact-font-size: 0.85rem;
@@ -149,6 +151,12 @@ th {
         display: block;
       }
     }
+  }
+  .cell-reflow--block {
+      &:before {
+        padding-right: 0;
+        display: block;
+      }
   }
 }
 
