--- a/tornadofaces/src/themes/tornado/scss/components/_sidemenu.scss
+++ b/tornadofaces/src/themes/tornado/scss/components/_sidemenu.scss
@@ -42,17 +42,17 @@ $sidemenu-popuot-background: #1e1e1e;
   align-items: center;
   justify-content: center;
   top: 12px;
-  right: -16px;
+  right: -24px;
   z-index: 1;
-  width: 25px;
+  width: 32px;
   height: 50px;
   border-radius: 0 2px 2px 0;
   background: #181818;
   >i {
-    font-size: 2.2rem;
+    font-size: 1.6rem;
     &:before {
       display: block;
-      margin-left: -0.6rem;
+      margin-left: 0;
       vertical-align: middle;
     }
   }
@@ -89,8 +89,10 @@ $sidemenu-popuot-background: #1e1e1e;
   flex-direction: column;
   overflow: visible;
   z-index: 999 !important;
+  input { box-sizing: border-box; }
   ul { //reset
     margin: 0;
+    box-sizing: border-box;
     >li {list-style: none;}
   }
 }
@@ -98,7 +100,7 @@ $sidemenu-popuot-background: #1e1e1e;
 .sidemenu-content {
   position: relative;
   padding-bottom: 2.5rem !important; //todo: FIX this
-  max-height: 100%;
+//  max-height: 100%;
 }
 .sidemenu-search {
   padding: $sidemenu-item-padding;
