Started working on reveal

--- a/tornadofaces/src/themes/tornado/scss/theme.scss
+++ b/tornadofaces/src/themes/tornado/scss/theme.scss
@@ -39,4 +39,5 @@ $foundation-version: "1.0.3";
 "components/contextmenu",
 "components/source",
 "components/table",
+"components/reveal",
 "tornadofaces";
