--- a/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
+++ b/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
@@ -8075,6 +8075,12 @@ th {
   .cell-reflow--block:before {
     padding-right: 0;
     display: block; } }
+.reveal .reveal-content {
+  display: none; }
+
+.reveal.is-active .reveal-content {
+  display: block; }
+
 .boxed, .accordion, .accordion.item-spacing .accordion-item {
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.08);
   border: 1px solid #dfdfdf; }
