--- a/tornadofaces/src/themes/tornado/scss/components/_reveal.scss
+++ b/tornadofaces/src/themes/tornado/scss/components/_reveal.scss
@@ -1,7 +1,15 @@
-.reveal .reveal-content {
+.reveal.visibility {
+  visibility: hidden;
+}
+
+.reveal.visibility.is-active {
+  visibility: visible;
+}
+
+.reveal.display {
   display: none;
 }
 
-.reveal.is-active .reveal-content {
-  display: block;
+.reveal.display.is-active {
+  display: inherit;
 }
