--- a/site/src/main/webapp/resources/tornadofaces-tornado/theme.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/theme.scss
@@ -40,4 +40,5 @@ $foundation-version: "1.0.3";
 "components/source",
 "components/table",
 "components/reveal",
+"components/breadcrumbs",
 "tornadofaces";
