--- a/site/src/main/webapp/resources/tornadofaces-tornado/tornadofaces.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/tornadofaces.scss
@@ -102,7 +102,23 @@
   }
 }
 
-CS
+#quick-links {
+  li:nth-child(2) {
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+  }
+
+  a {
+    display: flex;
+    flex-direction: row;
+
+  }
+  i {
+    font-size: 1.4rem;
+  }
+  span {
+    margin-left: 0.8rem;
+  }
+}
 
 span.highlight {
   background-color: orange;
