--- a/site/src/main/webapp/resources/tornadofaces-tornado/theme.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/theme.scss
@@ -41,4 +41,5 @@ $foundation-version: "1.0.3";
 "components/table",
 "components/reveal",
 "components/breadcrumbs",
+"components/spacing",
 "tornadofaces";
