--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_sidemenu.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_sidemenu.scss
@@ -41,10 +41,10 @@ $sidemenu-popuot-background: #1e1e1e;
   display: flex;
   align-items: center;
   justify-content: center;
-  top: 12px;
-  right: -24px;
+  bottom: 0;
+  left: 0;
   z-index: 1;
-  width: 32px;
+  width: 100%;
   height: 50px;
   border-radius: 0 2px 2px 0;
   background: #181818;
