--- a/theme/src/theme.scss
+++ b/theme/src/theme.scss
@@ -1,44 +1,44 @@
 $foundation-version: "1.0.3";
 
-@import "vendor/normalize",
-"settings",
-"global",
-"helpers/functions",
-"helpers/mixins",
-"helpers/breakpoints",
-"helpers/images",
-"components/action-sheet",
-"components/block-list",
-"components/button",
-"components/button-group",
-"components/card",
-"components/extras",
-"components/forms",
-"components/grid",
-"components/title-bar",
-"components/label",
-"components/list",
-"components/menu-bar",
-"components/modal",
-"components/motion",
-"components/notification",
-"components/off-canvas",
-"components/popup",
-"components/switch",
-"components/tabs",
-"components/accordion",
-"components/typography",
-"components/utilities",
-"components/ladda",
-"components/nouislider",
-"components/icons",
-"components/pickaday",
-"components/flippanel",
-"components/sidemenu",
-"components/colorpicker",
-"components/contextmenu",
-"components/source",
-"components/table",
-"components/reveal",
-"components/breadcrumbs",
-"tornadofaces";
+@import "vendor/normalize";
+@import "settings";
+@import "global";
+@import "helpers/functions";
+@import "helpers/mixins";
+@import "helpers/breakpoints";
+@import "helpers/images";
+@import "components/action-sheet";
+@import "components/block-list";
+@import "components/button";
+@import "components/button-group";
+@import "components/card";
+@import "components/extras";
+@import "components/forms";
+@import "components/grid";
+@import "components/title-bar";
+@import "components/label";
+@import "components/list";
+@import "components/menu-bar";
+@import "components/modal";
+@import "components/motion";
+@import "components/notification";
+@import "components/off-canvas";
+@import "components/popup";
+@import "components/switch";
+@import "components/tabs";
+@import "components/accordion";
+@import "components/typography";
+@import "components/utilities";
+@import "components/ladda";
+@import "components/nouislider";
+@import "components/icons";
+@import "components/pickaday";
+@import "components/flippanel";
+@import "components/sidemenu";
+@import "components/colorpicker";
+@import "components/contextmenu";
+@import "components/source";
+@import "components/table";
+@import "components/reveal";
+@import "components/breadcrumbs";
+@import "tornadofaces";
