fonts - bold styling i hovedsak

--- a/site/src/main/webapp/resources/tornadofaces-tornado/_global.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/_global.scss
@@ -30,7 +30,7 @@ $headers: "h1,h2,h3,h4,h5,h6";
 
 // We use these to define default font weights
 $font-weight-normal: normal !default;
-$font-weight-bold: bold !default;
+$font-weight-bold: 600 !default;
 
 // We use these to control various global styles
 $body-background: #fff !default;
