--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_menu-bar.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_menu-bar.scss
@@ -297,7 +297,7 @@
     > li.title {
       padding: $menubar-item-padding;
       cursor: default;
-      font-weight: bold;
+      font-weight: $font-weight-bold;
     }
   }
 
