--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_block-list.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_block-list.scss
@@ -61,7 +61,7 @@
 ) {
   margin-top: 1em;
   color: $color;
-  font-weight: bold;
+  font-weight: $font-weight-bold;
   margin-bottom: 0.5em;
   margin-left: $offset;
   font-size: $font-size;
@@ -175,7 +175,7 @@
     right: get-side($padding, right);
     top: 50%;
     transform: translateY(-50%);
-    font-weight: bold;
+    font-weight: $font-weight-bold;
     color: $color;
     font-size: 2em;
   }
