--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_contextmenu.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_contextmenu.scss
@@ -2,7 +2,7 @@
   display: block;
   padding: 3px 15px;
   font-size: 11px;
-  font-weight: bold;
+  font-weight: $font-weight-bold;
   line-height: 20px;
   color: #999;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
