--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_pickaday.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_pickaday.scss
@@ -58,7 +58,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   padding: 5px 3px;
   font-size: 14px;
   line-height: 20px;
-  font-weight: bold;
+  font-weight: $font-weight-bold;
   background-color: #fff;
 }
 .pika-title select {
@@ -142,7 +142,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   color: #999;
   font-size: 12px;
   line-height: 25px;
-  font-weight: bold;
+  font-weight: $font-weight-bold;
   text-align: center;
 }
 
@@ -170,12 +170,12 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 .is-today .pika-button {
   color: $primary-color;
-  font-weight: bold;
+  font-weight: $font-weight-bold;
 }
 
 .is-selected .pika-button {
   color: #fff;
-  font-weight: bold;
+  font-weight: $font-weight-bold;
   background: $primary-color;
   box-shadow: inset 0 1px 3px darken($primary-color, 10%);
 }
