--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_icons.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_icons.scss
@@ -16,6 +16,8 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
+  vertical-align: middle;
+  margin-right: 0.15em;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
